--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -325,6 +325,14 @@ class PageLoader {
 			pageNode.replaceChild(img, pageNode.querySelector("svg"));
 			this.deferedCheckQueue();
 		}.bind(this);
+		img.onerror = function() {
+			if(pageNode.first_try ===undefined)
+			{
+				pageNode.scanFilePath = "/404.jpeg";
+				pageNode.first_try = false;
+				this.loadPage.bind(this)(pageNode);
+			}
+		}.bind(this);
 	}
 }
 
@@ -418,7 +426,7 @@ let HighlightList = [];
 
 function GetOCRTxt() {
 			    let parsedUrlParams = parseURLParams(window.location.href);
-			    Server.Get("/books/"+parsedUrlParams['scanId']+"/ocr.txt",function(content) {
+				Server.Get("/getBookRessources?book="+parsedUrlParams['scanId']+"&ressource=ocr.txt",function(content) {
 			    
 			      //let doc2 = document.createElement("div");
 			      //let doc = document.createElement("p");
@@ -455,7 +463,7 @@ function UpdateOCRTxt(x)
 {
   console.log(HighlightList);
   for(let i = 0; i < HighlightList.length; i++)
-      x = x.replace(new RegExp('('+HighlightList[i]+')','gi'),'<mark>$1</mark>');
+      x = x.replace(new RegExp('(\\b'+HighlightList[i]+'\\b)','gi'),'<mark>$1</mark>');
 
   let RegSrch = /\n-----\s(\d+)\s/g;
 	x = '<p data-page="1" class="ocrpage">' + x;
@@ -531,7 +539,7 @@ function init() {
 	let parsedUrlParams = parseURLParams(window.location.href);
 	let scanId = parsedUrlParams['scanId'];
 	
-		Server.Get("/books/" + scanId + "/readerInfo.json", function(content) {
+	Server.Get("/getBookRessources?book=" + scanId + "&ressource=readerInfo.json", function(content) {
 		let scanInfo = JSON.parse(content);
 		
 		scanInfo.pages.sort(function(a, b) {
@@ -544,6 +552,8 @@ function init() {
 
 			let pageNode = document.createElement("div");
 			pageNode.innerHTML = svgCode;
+			pageNode.width_x = scanInfo.pages[i].width;
+			pageNode.height_y = scanInfo.pages[i].height;
 			pageNode.pageNumber = scanInfo.pages[i].pageNumber;
 			pageNode.ondblclick = function(){document.getElementsByClassName("ocrpage")[this.pageNumber-1].scrollIntoView();};
 			pageNode.classList.add("page");
@@ -552,7 +562,7 @@ function init() {
 			anchorNode.name = "page" + scanInfo.pages[i].pageNumber;
 			document.querySelector(".reader").appendChild(anchorNode);			
 			document.querySelector(".reader").appendChild(pageNode);
-			pageNode.scanFilePath = "/books/"+scanId+ "/" + scanInfo.pages[i].file.substr(scanInfo.pages[i].file.search("page"));
+			pageNode.scanFilePath = "/getBookRessources?book="+scanId+ "&ressource=" + scanInfo.pages[i].file.substr(scanInfo.pages[i].file.search("page"));
 			//	scanInfo.pages[i].file.replace("/books/","/getBookRessource?book=").replace("/page","&res=page");
 			pageNode.info = i;
 		}
@@ -566,7 +576,7 @@ function init() {
 	});
 
 	document.getElementsByClassName("reader")[0].addEventListener("scroll", updateAfterScroll, false);
-	Server.Get("/books/" + scanId + "/info.json", function(content) {
+		Server.Get("/getBookRessources?book=" + scanId + "&ressource=info.json", function(content) {
 		metadata = JSON.parse(content);
 	  	document.getElementById("scanBibInfo").innerHTML = metadata.bib;
 		if(metadata.data.creators[0].lastName === undefined)
@@ -583,14 +593,14 @@ function init() {
 
 	parsedUrlParams["query"] = decodeURIComponent(parsedUrlParams["query"]);
 		
-	Server.Get("/books/actions/searchInScan?scanId=" + scanId + "&query=" + encodeURIComponent(parsedUrlParams["query"]), function(content) {
+	Server.Get("/searchInBook?scanId=" + scanId + "&query=" + encodeURIComponent(parsedUrlParams["query"]), function(content) {
 		let searchResults = JSON.parse(content);
 		// temporary needed
 		searchResults.pages = searchResults.books;
 
 		document.getElementById("searchQuery").innerHTML = parsedUrlParams["query"];
 		
-		if(searchResults.is_fuzzy === undefined)
+		if(searchResults.is_fuzzy === false)
 		{	
 		  let pagesList = [];
 		  HighlightList = [parsedUrlParams["query"]];
