--- a/web/ManageBooks.html
+++ b/web/ManageBooks.html
@@ -352,7 +352,7 @@ class User {
 
     }
 	let xhr = new XMLHttpRequest();
-	xhr.open("GET","/getAllBooks",true);
+	  xhr.open("GET","/getBookRessources",true);
 	xhr.onload = function() {
 		allBooksJS = JSON.parse(xhr.responseText);
 		let ls = document.getElementById("BookContainer");
