--- a/web/Search.html
+++ b/web/Search.html
@@ -435,6 +435,7 @@ function ApplyFilterOptions()
 			}
 			inner+= "?query="+lastInput;
 			inner+="&scanId="+jsonObj.books[i].scanId;
+			inner+="&fuzzyness="+document.getElementById("FuzzyID").value; 
 			inner+="' onclick='return changeColor(this);'>";
 			if(!jsonObj.books[i].hasocr || (jsonObj.books[i].hasocr == undefined))
 			{
@@ -567,6 +568,7 @@ function sendToPage(name)
 			}
 			inner+= "?query="+input;
 			inner+="&scanId="+jsonObj.books[i].scanId;
+			inner+="&fuzzyness="+document.getElementById("FuzzyID").value; 
 			inner+="' onclick='return changeColor(this);'>";
 			if(!jsonObj.books[i].hasocr || (jsonObj.books[i].hasocr == undefined))
 			{
@@ -797,7 +799,7 @@ window.addEventListener("load",User.initialise,false);
 				<div class="slidecontainer">
 					<p class="slider">Fuzzyness (Smaller is more accurate, zero means no fuzzy search): </p>
 					<p id="SliderNum" class="sliderNum"></p>
-					<input oninput="document.getElementById('SliderNum').innerHTML=this.value;" id="FuzzyID" type="range" min="0" max="5" value="0" class="slider" id="myRange"></div>
+					<input oninput="document.getElementById('SliderNum').innerHTML=this.value;" id="FuzzyID" type="range" min="0" max="2" value="0" class="slider" id="myRange"></div>
 				<div class="checker">
 					<p class="slider">Search only in Titel</p>
 					<label class="checkbox-inline"><input id="SearchInTitle" type="checkbox" value=""></label>
