--- a/web/UploadBook.html
+++ b/web/UploadBook.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<!--<link rel="stylesheet" href="style.css">-->
 		<title>Upload book - clas digital</title>
-
+		<script src="/jszip.js"></script>
 		<style>
 
 .biggerPageClass {
@@ -21,7 +21,6 @@
 .filesList {
 	list-style-type: none;
 	width: 100%;
-	background-color: #4682b4;
 	color: white;
 	padding: 0;
 }
@@ -29,17 +28,25 @@
 .filesList>li {
 	display: block;
 	padding: 2rem;
+	background-color: #4682b4;
 	border-bottom: 1px solid white;
 }
 
-.filesList p {
+.filesList li p {
 	display: block;
-	padding: 2rem;
+	padding-left: 3rem;
+	padding-right: 3rem;
 	font-size: large;
+	vertical-align: center;
+	line-height: 1rem;
 	color: black;
 }
 
-.filesList>li:not(:last-child) {
+.filesList p progress{
+	margin: auto;
+}
+
+.filesList>li {
 	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 104 168'><polygon stroke='white' stroke-width='2' fill='none' points='0,0 0,162 100,162 100,40 60,0' /><path stroke='white' stroke-width='2' fill='none' d='M60,0 L60,40 L100,40' /></svg>");
 	background-repeat: no-repeat;
 	background-size: 2.2rem;
@@ -47,24 +54,8 @@
 	padding-left:4rem;
 
 }
-.filesList>li:not(:last-child).donotuse:hover {
-	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 104 168'><polygon stroke='white' stroke-width='2' fill='none' points='0,0 0,162 100,162 100,40 60,0' /><path stroke='white' stroke-width='2' fill='none' d='M60,0 L60,40 L100,40' /></svg>"),
-		url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 104 168'><path stroke='white' stroke-width='2' fill='none' d='M0,20 L100,20'/><polygon stroke='white' stroke-width='2' fill='none' points='10,20 20,162 80,162 90,20'/><path stroke='white' stroke-width='2' fill='none' d='M25,30 L33,155'/><path stroke='white' stroke-width='2' fill='none' d='M42.5,30 L45,155'/><path stroke='white' stroke-width='2' fill='none' d='M58.5,30 L55,155'/><path stroke='white' stroke-width='2' fill='none' d='M75,30 L67,155'/><path stroke='white' stroke-width='2' fill='none' d='M30,20 L35,0 L65,0 70,20'/></svg>");
-	background-position: 1rem center, right 1rem center;
-}
 
-.filesList>li:not(:last-child) progress {
-	float: right;	
-}
-
-.filesList>li:not(:last-child) button {
-	float: right;
-	height: 1em;
-	width: 1em;
-	display: none;
-}
-
-.filesList>li:last-child {
+.filesList>li:first-child {
 	background-color: #ccd7ff;
 	height: 8rem;
 	line-height: 4rem;
@@ -75,8 +66,10 @@
 	transition: font 0.2s ease;
 }
 
-.filesList>li:last-child:hover {
-	font-size: 1.8rem;
+.filesList>li:not(:first-child):hover {
+	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 104 168'><polygon stroke='white' stroke-width='2' fill='none' points='0,0 0,162 100,162 100,40 60,0' /><path stroke='white' stroke-width='2' fill='none' d='M60,0 L60,40 L100,40' /></svg>"),
+		url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-2 -2 104 168'><path stroke='white' stroke-width='2' fill='none' d='M0,20 L100,20'/><polygon stroke='white' stroke-width='2' fill='none' points='10,20 20,162 80,162 90,20'/><path stroke='white' stroke-width='2' fill='none' d='M25,30 L33,155'/><path stroke='white' stroke-width='2' fill='none' d='M42.5,30 L45,155'/><path stroke='white' stroke-width='2' fill='none' d='M58.5,30 L55,155'/><path stroke='white' stroke-width='2' fill='none' d='M75,30 L67,155'/><path stroke='white' stroke-width='2' fill='none' d='M30,20 L35,0 L65,0 70,20'/></svg>");
+	background-position: 1rem center, right 1rem center;
 }
 
 .saveButton {
@@ -113,11 +106,9 @@
 }
 
 .inputStyle {
-	width: 0.1px;
-	height: 0.1px;
+	width: 80%;
+	height: 5vh;
 	opacity: 0;
-	overflow: hidden;
-	position: absolute;
 }
 
 .filelist {
@@ -233,6 +224,14 @@ i.close {
 	cursor: pointer;
 } 
 
+.frej {
+	background-color: black;
+	color: white;
+	border: 0;
+	padding: 1rem;
+	margin: 1rem;
+}
+
 		</style>
 
 		<script>
@@ -269,10 +268,126 @@ class User {
 		let input = document.getElementById("fileUpID");
 		input.addEventListener('change',function(e) {
 			console.log(e.target.files.length);
-			document.getElementById("FileDropList").innerHTML = "<p>File selected: "+e.target.files[0].name+"<br>size: "+ Math.round((e.target.files[0].size/1024)/1024)+"MB</p>";
+			globalFileList = Array.from(e.target.files);
+			ShowFiles();
+			var waitfor = 0;
+
+			document.getElementById("SaveNow").disabled = true;
+			document.getElementById("SaveNow").innerHTML = "Processing input files..";
+			for(let i = globalFileList.length-1; i>=0; i--)
+			{
+				let varstr = globalFileList[i].name.slice(globalFileList[i].name.lastIndexOf("."));
+	
+				if(varstr=='.zip')
+				{
+					waitfor++;
+					let reader = new FileReader();
+					reader.onloadend = function( event ) {
+       					 if ( event.target.readyState !== FileReader.DONE ) {
+           					 return;
+        					}
+						let new_zip = new JSZip();
+						new_zip.loadAsync(reader.result).then(function(zip){
+							for(var x in zip.files)
+							{
+								zip.files[x].name = x;
+								zip.files[x].is_zip_file = true;
+								globalFileList.push(zip.files[x]);
+							}
+							waitfor--;
+							if(waitfor==0)
+							{
+								document.getElementById("SaveNow").disabled = false;
+								document.getElementById("SaveNow").innerHTML = "Speichern!";
+								ShowFiles();
+							}
+						});
+					}
+					reader.readAsArrayBuffer(globalFileList[i]);
+				}
+				else
+				{
+					globalFileList[i].reader_callback_func = function(callback,obj) 					{
+						let reader= new FileReader();
+						reader.onloadend = function(event) {
+							if(event.target.readyState !== FileReader.DONE)
+								return;
+							callback(reader.result);
+						}
+						reader.readAsArrayBuffer(obj);
+					}
+				}
+			}
+
+			if(waitfor==0)
+			{
+				document.getElementById("SaveNow").disabled = false;
+				document.getElementById("SaveNow").innerHTML = "Speichern!";
+			}
 		});
 	}
 }
+
+function DeleteThis(i)
+{
+	globalFileList.splice(i,1);
+	ShowFiles();
+}
+
+function ShowFiles()
+{
+			
+			let warning = "";
+			for(let i = globalFileList.length-1; i >= 0; i--)
+			{
+				if(globalFileList[i].name.length < 4)
+				{
+					globalFileList.splice(i,1);
+					continue;
+				}
+				let varstr = globalFileList[i].name.slice(globalFileList[i].name.lastIndexOf("."));
+				if(varstr!='.jpg'&&varstr!='.txt'&&varstr!='.zip')
+				{
+					globalFileList.splice(i,1);
+					continue;
+				}
+			}
+
+			document.getElementById("FileDropList").innerHTML = "<li onclick='document.getElementById("+"\"fileUpID\""+").click()'>Hier klicken um eine Datei auszuwaehlen</li>";
+			for(let i = 0; i < globalFileList.length; i++)
+			{
+				let list = document.createElement("li");
+				
+				if(globalFileList[i].is_zip_file !== undefined)
+				{
+					list.style["background-color"] = "yellow";
+					list.style["margin-left"] = "4rem";
+				}
+				let p = document.createElement("p");
+				p.innerHTML = "File selected: "+globalFileList[i].name;
+
+				let prog = document.createElement("progress");
+				let span = document.createElement("span");
+				prog.style["float"] = "right";
+				prog.style["display"] = "inline-block";
+				prog["max"] = "100";
+
+				span.innerHTML = "0%";
+				span.style["float"] = "right";
+				span.style["margin-right"] = "2rem";
+
+				p.appendChild(prog);
+				p.appendChild(span);
+				list.appendChild(p);
+				list.onclick = function(){DeleteThis(i);};
+				document.getElementById("FileDropList").appendChild(list);
+				globalFileList[i].listentry = list;
+				list.progentry = prog;
+				list.spanentry = span;
+			}
+}
+
+let globalFileList = [];
 
 //Create an enum to identify the valid types of State Banner changes
 var StateBannerType = {"success":1,"danger":2,"warning":3,"info":4,"release":5};
@@ -326,8 +441,9 @@ function showError(fg,bg,text)
 
 function UploadAll()
 {
-	let input = document.getElementById("fileUpID");
 	let permalink = document.getElementById("Permalink").value;
+	let elem = document.getElementById("fileUpID");
+	elem.parentNode.removeChild(elem);
 
 	if(permalink=="")
 	{
@@ -335,16 +451,13 @@ function UploadAll()
 		window.scrollTo(0,0);
 		return;
 	}
-	if(input.files.length!=1)
+	if(globalFileList.length<1)
 	{
 		StateBanner.ChangeBanner("No files selected!",StateBannerType.danger);
 		window.scrollTo(0,0);
 		return;
 	}
-	console.log("Upload: "+input.files.length+" files");
-
-	console.log("With name: "+input.files[0].name);
-	console.log("And size: "+input.files[0].size+" Bytes");
+	console.log("Upload: "+globalFileList.length+" files");
 
 	let xhr = new XMLHttpRequest();
 	let requ = "/getBookMetadata";
@@ -369,7 +482,7 @@ function UploadAll()
 
 		console.log(xhr.responseText);
 		let js = JSON.parse(xhr.responseText);
-		document.getElementById("BookMeta").innerHTML = js.metadata.bib;
+		document.getElementById("BookMeta").innerHTML = js.bib;
 		let advancedOpts = document.getElementById("ModalBanner");
 		//Tell the modal banner it should display itself right now
 		advancedOpts.style.display = "block";
@@ -381,7 +494,7 @@ function UploadAll()
 			showError("black","red","Upload rejected");
 			setTimeout(function(){location.reload();},1000);
 		}
-		return;
+
 		//If the user clicked outside of the modal banner close the window as well
 		window.onclick = function(event) {
 			if (event.target == advancedOpts) {
@@ -390,137 +503,117 @@ function UploadAll()
 				setTimeout(function(){location.reload();},1000);
 			}
 		}
-		if(js.dirstruct.files.length < 3)
-		{
-			startUpload = function(){
-				document.getElementById("okka").innerHTML = "Uploading 0%";
-				document.getElementById('ModalBanner').style.display='none';
-				recUpload(0,permalink,input.files[0],0,1024*1024*2);
-			}
-		}
-		else
-		{
-			startUpload = function() {
-				document.body.style.overflow = "hidden";
-				document.getElementById("BookMetaHeader").innerHTML = "WARNING: There are already these files on the server!\nAre you sure this is the right book?";
-				let x = document.getElementById("BookMeta");
-				let y = "<ol>";
-				for(var i = 0; i < js.dirstruct.files.length; i++)
-				{
-					y += "<li class='filelist'>"+js.dirstruct.files[i].name+"</li>";
-				}
-				y+="</ol>"
-				x.innerHTML = y;
-				x.focus();
-				startUpload = function(){
-					document.getElementById("okka").innerHTML = "Uploading 0%";
-					document.getElementById('ModalBanner').style.display='none';
-					recUpload(0,permalink,input.files[0],0,1024*1024*2);
-				}
+
+		startUpload = function() {	
+			document.getElementById('ModalBanner').style.display='none';
+			document.getElementById('FileDropList').scrollIntoView();
+			for(let x = 0; x < globalFileList.length; x++)
+			{
+				instaUpload(permalink,globalFileList[x],globalFileList[x].listentry);
 			}
 		}
 		return;
 	}
 	xhr.send(null);
 	console.log(document.getElementById("saver").innerHTML);
-	document.getElementById("saver").innerHTML = "<div class='progresStyle'><div id='progressB' class='internStyle'><p id='okka'>Synchronizing with the server...</p></div></div>";
 }
 
-function showWriteError(respText)
+async function instaUpload2(key,file,outlist)
 {
-	let js = JSON.parse(respText);
-	document.body.style.overflow = "hidden";
-		let advancedOpts = document.getElementById("ModalBanner");
-		//Tell the modal banner it should display itself right now
-		advancedOpts.style.display = "block";
+	if(file.cstart_byte === undefined)
+		file.cstart_byte = 0;
 
-		//Prepare the close button, on close click it will hide the modal banner
-		let close = document.getElementsByClassName("close")[0];
-		close.onclick = function() {
-			advancedOpts.style.display = "none";
-			document.body.style.overflow = "auto";
-		}
 
-		//If the user clicked outside of the modal banner close the window as well
-		window.onclick = function(event) {
-			if (event.target == advancedOpts) {
-				advancedOpts.style.display = "none";
-				document.body.style.overflow = "auto";
-			}
-		}
-
-				document.getElementById("ButtonTypes").innerHTML = "";
-				document.getElementById("BookMetaHeader").innerHTML = "This is the changelog of the server!<br>It shows all changed files";
-				let x = document.getElementById("BookMeta");
-				let y = "<ol>";
-				for(var i = 0; i < js.length; i++)
-				{
-					y += "<li class='filelist'>"+js[i].name;
-					if(js[i].written)
-						y+="<p class='successwrite'>Written</p></li>";
-					else
-						y+="<p class='failwrite'>Not written, already an file with this name on the server!</p></li>";
-				}
-				y+="</ol>"
-				x.innerHTML = y;
-				x.focus();
-}
-
-function recUpload(upid,key,file,start,slice)
-{
+	let xval = Math.round(file.cstart_byte/file.size*100);
+	outlist.progentry.value = xval;
+	outlist.spanentry.innerHTML = xval+"%";
+	
 	let reader = new FileReader();
-	let blob = file.slice(start,start+slice);
-	reader.onload = function(ev) {
-
+	let endRead = file.cstart_byte+0x100000+1;
+	if(endRead>file.size)
+		endRead = file.size;
+	let blob = file.slice(file.cstart_byte,endRead);
+	
+	 reader.onloadend = function( event ) {
+        if ( event.target.readyState !== FileReader.DONE ) {
+            return;
+        }
+		
 		let xhr = new XMLHttpRequest();
-		let requ = "/uploadBook";
+		let requ = "/uploadBook?itemKey="+key+"&filename="+file.name;
+		if(file.cstart_byte==0)
+		{
+			requ+="&operation=begin";
+		}
+		else if(endRead==file.size)
+		{
+			requ+="&operation=end";
+		}
 		xhr.open("POST",requ,true);
-		xhr.setRequestHeader("ZoteroItemKey",key);
-		xhr.setRequestHeader("UniqueUploadID",upid);
-		xhr.setRequestHeader("hasData","true");
 		xhr.onload = function() {
 			if(xhr.status!=200)
 			{
-				showError("black","red",xhr.responseText);
+				outlist.innerHTML = "Error the file: "+file.name+"  "+xhr.responseText;
+				outlist.style["background-color"] = "red";
 				return;
 			}
-			start+=slice;
-			document.getElementById("okka").innerHTML = "Uploading "+Math.round(((start/file.size)*100))+"%";
-			document.getElementById("progressB").style.width = Math.round(((start/file.size)*100))+"%";
-			if(start<file.size)
+			if(endRead==file.size)
 			{
-				if((start+slice)>file.size)
-				{
-					slice = file.size-start;
-				}
-
-				recUpload(xhr.getResponseHeader("UniqueUploadID"),key,file,start,slice);
+				outlist.style["background-color"] = "green";
+				outlist.innerHTML = "Uploaded file: "+file.name+" successfully";
+				return;
 			}
-			else
-			{
-
-				document.getElementById("okka").innerHTML = xhr.responseText;
-				let yhr = new XMLHttpRequest();
-				yhr.open("POST","/uploadBook",true);
-				yhr.setRequestHeader("ZoteroItemKey",key);
-				yhr.setRequestHeader("UploadDone","true");
-				yhr.setRequestHeader("UniqueUploadID",upid);
-				yhr.setRequestHeader("hasData","true");
-				yhr.onload = function() {
-					if(yhr.status!=200)
-					{
-						showError("black","red","Could not write all files to the server");
-						showWriteError(yhr.responseText);
-						return;
-					}
-					document.getElementById("okka").innerHTML = "Upload done!!";
-				}
-				yhr.send(null);
-			}
+			file.cstart_byte = endRead;
+			instaUpload2(key,file,outlist);
 		}
 		xhr.send(blob);
+	 }
+	reader.readAsArrayBuffer(blob);
+}
+
+function instaUpload(key,file,outlist)
+{
+	let checkfile = new XMLHttpRequest();
+	let requ_chk = "/getBookRessources?exist_check=true&book="+key+"&ressource="+file.name;
+	outlist.progentry.value = "0";
+	outlist.spanentry.innerHTML = "0%";
+	checkfile.open("GET",requ_chk,true);
+	checkfile.onload = function() {
+		if(checkfile.status==200)
+		{
+			outlist.innerHTML = "Error the file: "+file.name+" already exists!";
+			outlist.style["background-color"] = "red";
+			return;
+		}
+	let reader = new FileReader();
+		//TODO: outlist.
+	reader.onload = function() {
+		let xhr = new XMLHttpRequest();
+		let requ = "/uploadBook?itemKey="+key+"&filename="+file.name;
+		xhr.open("POST",requ,true);
+		xhr.upload.addEventListener("progress", function(oEvent){
+			if(oEvent.lengthComputable)
+			{
+				let xval = Math.round(oEvent.loaded/oEvent.total*100);
+				outlist.progentry.value = xval;
+				outlist.spanentry.innerHTML = xval+"%";
+			}
+		});
+		xhr.onload = function() {
+			if(xhr.status!=200)
+			{
+				outlist.innerHTML = xhr.responseText;
+				outlist.style["background-color"] = "red";
+				return;
+			}
+			outlist.style["background-color"] = "green";
+			outlist.innerHTML = "Uploaded file: "+file.name+" successfully";
+		}
+		xhr.send(reader.result);
 	}
-	reader.readAsBinaryString(blob);
+	reader.readAsArrayBuffer(file);
+	}
+	checkfile.send(null);
 }
 
 
@@ -598,15 +691,15 @@ window.addEventListener("load",User.initialise,false);
 		<div id="StateBanner"></div>
 		<div class="biggerPageClass">
 			<h1>Volltexte hochladen</h1>
-			<input class="inputStyle" type="file" id="fileUpID"/>
+			<input class="inputStyle" type="file" id="fileUpID" multiple/>
 
 			<h2><span>1.</span>Wo sind die Dateien?</h2>
 			<p>Die Zip-Dateien (nur eine aufeinmal) der Staatsbibliothek müssen zuerst einmal auf den Projekt-Server gelangen. Lade sie von der Bibliothek auf deinen PC und nutze das Feld unten, um sie wieder auszuwählen. Sie werden dann auf den Projekt-Server übertragen.</p>
 			<p><strong>Wichtig:</strong> Schließe diesen Tab nicht, während der Upload läuft!</p>
 			<ul class="list-group" id="CurrentUploads">
 			</ul>
-			<ul id="FileDropList" class="filesList" onclick="document.getElementById('fileUpID').click()">
-				<li>Hier klicken um eine Datei auszuwaehlen</li>
+			<ul id="FileDropList" class="filesList">
+				<li onclick='document.getElementById("fileUpID").click()'>Hier klicken um eine Datei auszuwaehlen</li>
 			</ul>
 			<br>
 			<h2><span>2.</span>Ist alles korrekt?</h2>
@@ -621,7 +714,7 @@ window.addEventListener("load",User.initialise,false);
 			<h2><span>4.</span>Speichern!</h2>
 			<div class="saver" id="saver">
 				<p>Speichere diesen Volltext auf dem Projektserver!</p>
-				<button class="saveButton" onclick="UploadAll()">Speichern!</button>
+				<button id="SaveNow" class="saveButton" onclick="UploadAll()">Speichern!</button>
 			</div>
 		</div>
 		<div id="ModalBanner" class="modal">
