--- a/web/Search.html
+++ b/web/Search.html
@@ -487,7 +487,7 @@ function sendToPage(name)
 	let inputObj = document.getElementById(name);
 	let input = inputObj.value;
 	//Form the request for the server
-	let requ = "/searchword?search="+input;
+	let requ = "/searchword?search="+encodeURI(input);
 
 	//Create the json file with the advanced search options
 	requ += "&fuzzyness="+document.getElementById("FuzzyID").value;
