--- a/web/Search.html
+++ b/web/Search.html
@@ -427,7 +427,7 @@ function ApplyFilterOptions()
 			if(!jsonObj.books[i].hasocr || (jsonObj.books[i].hasocr == undefined))
 			{
 
-				inner = "<a data-specialhref='/1/ShowMetadata.html";
+				inner = "<a data-specialhref='/ShowMetadata";
 			}
 			else
 			{
@@ -565,7 +565,7 @@ function sendToPage(name)
 			if(!jsonObj.books[i].hasocr || (jsonObj.books[i].hasocr == undefined))
 			{
 
-				inner = "<a data-specialhref='/getBookMetadata";
+				inner = "<a data-specialhref='/ShowMetadata";
 			}
 			else
 			{
