--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -417,7 +417,7 @@ function parseURLParams(url) {
 }
 function doAdditionalSearch() {
 	let parsedUrlParams = parseURLParams(window.location.href);
-	window.open("/GetBooks.html?query="+document.getElementById("adSrch").value+"&scanId="+parsedUrlParams['scanId']+"&fuzzyness="+parsedUrlParams['fuzzyness']);
+	window.open("/GetBooks?query="+document.getElementById("adSrch").value+"&scanId="+parsedUrlParams['scanId']+"&fuzzyness="+parsedUrlParams['fuzzyness']);
 
 }
 
