--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -548,7 +548,7 @@ function init() {
 	let parsedUrlParams = parseURLParams(window.location.href);
 	let scanId = parsedUrlParams['scanId'];
 	
-	Server.Get("/getBookMetadata?scanId=" + scanId, function(content) {
+	Server.Get("/getBookRessources?book=" + scanId+"&ressource=readerInfo.json", function(content) {
 		let scanInfo = JSON.parse(content);
 		
 		scanInfo.pages.sort(function(a, b) {
