--- a/web/Search.html
+++ b/web/Search.html
@@ -532,7 +532,7 @@ function sendToPage(name)
 		//Parse the received json file
 		jsonObj = JSON.parse(xhr.responseText);
 		lastInput = input;
-		if(jsonObj.books === undefined)
+		if(jsonObj === null)
 		{
 			alert("No results found!");
 			return;
