--- a/web/Search.html
+++ b/web/Search.html
@@ -32,6 +32,11 @@
 	margin-top: 3rem;
 	margin-bottom: 1rem;
 }
+
+.headerStyle progress {
+	margin-left: 2rem;
+}
+
 /*Styling the search bar*/
 .form-wrapper-2 {
 	display: inline-block;
