--- a/web/Search.html
+++ b/web/Search.html
@@ -34,9 +34,9 @@
 }
 
 .headerStyle progress {
+	display: block;
 	float: right;
 	margin-right: 0;
-	height: 100%;
 	color: white;
 	padding: 3rem;
 }
